Update index.html and CSS with newsletter form and styles

--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
               <img src="./img/img-proyectos/uno.png" alt="Trust & Co.">
             </div>
             <div class="icon">
-              <a href="https://kissmegrram.com/" target="_blank" class="iconBox"> <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://kissmegrram.com/" target="_blank" class="iconBox">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -219,9 +220,9 @@
               <img src="./img/img-proyectos/dos.png" alt="Tonic">
             </div>
             <div class="icon">
-              <a href="http://54.145.240.219/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="http://54.145.240.219/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -243,9 +244,9 @@
               <img src="./img/img-proyectos/sensory.png" alt="Shower Gel">
             </div>
             <div class="icon">
-              <a href="https://sensoryseduction.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://sensoryseduction.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -268,9 +269,9 @@
               <img src="./img/img-proyectos/loulavie.png" alt="Trust & Co.">
             </div>
             <div class="icon">
-              <a href="https://loulavie.free.nf/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://loulavie.free.nf/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -291,9 +292,9 @@
               <img src="./img/img-proyectos/rippyclub.png" alt="Tonic">
             </div>
             <div class="icon">
-              <a href="https://rippyclub2024.webflow.io/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://rippyclub2024.webflow.io/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -314,9 +315,9 @@
               <img src="./img/img-proyectos/cuidmx.png" alt="Shower Gel">
             </div>
             <div class="icon">
-              <a href="https://cuid.mx/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://cuid.mx/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -343,9 +344,9 @@
               <img src="./img/img-proyectos/ternary.png" alt="Trust & Co.">
             </div>
             <div class="icon">
-              <a href="https://www.ternarydev.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://www.ternarydev.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -365,9 +366,9 @@
               <img src="./img/img-proyectos/merkimarket.png" alt="Tonic">
             </div>
             <div class="icon">
-              <a href="https://merkimarket.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://merkimarket.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -388,9 +389,9 @@
               <img src="./img/img-proyectos/cuidtech.png" alt="Shower Gel">
             </div>
             <div class="icon">
-              <a href="https://www.cuid.tech/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://www.cuid.tech/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -414,9 +415,9 @@
               <img src="./img/img-proyectos/nanikamahao.png" alt="Trust & Co.">
             </div>
             <div class="icon">
-              <a href="https://nanikamahao.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://nanikamahao.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -437,9 +438,9 @@
               <img src="./img/img-proyectos/miami.png" alt="Tonic">
             </div>
             <div class="icon">
-              <a href="https://miamiglobalsupplys.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://miamiglobalsupplys.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -460,9 +461,9 @@
               <img src="./img/img-proyectos/options.png" alt="Shower Gel">
             </div>
             <div class="icon">
-              <a href="https://optionsswing.webflow.io/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://optionsswing.webflow.io/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -486,9 +487,9 @@
               <img src="./img/img-proyectos/brillant.png" alt="Trust & Co.">
             </div>
             <div class="icon">
-              <a href="https://brilliantwoman.org/about/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://brilliantwoman.org/about/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -510,9 +511,9 @@
               <img src="./img/img-proyectos/kingjesus2.png" alt="Tonic">
             </div>
             <div class="icon">
-              <a href="https://kingjesusatl.org/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://kingjesusatl.org/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -534,9 +535,9 @@
               <img src="./img/img-proyectos/prates.png" alt="Shower Gel">
             </div>
             <div class="icon">
-              <a href="https://pratespais.kiwop.com/ca" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://pratespais.kiwop.com/ca" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -557,9 +558,9 @@
               <img src="./img/img-proyectos/mused.png" alt="Trust & Co.">
             </div>
             <div class="icon">
-              <a href="https://www.mused.design/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://www.mused.design/" class="iconBox" target="_blank" ><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -579,9 +580,9 @@
               <img src="./img/img-proyectos/kingjesus3.png" alt="Tonic">
             </div>
             <div class="icon">
-              <a href="https://kingjesuspartners.org/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://kingjesuspartners.org/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -603,9 +604,9 @@
               <img src="./img/img-proyectos/kingjesus.png" alt="Shower Gel">
             </div>
             <div class="icon">
-              <a href="https://kingjesus.org/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://kingjesus.org/" class="iconBox" target="_blank" ><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -628,9 +629,9 @@
               <img src="./img/img-proyectos/newwine.png" alt="Trust & Co.">
             </div>
             <div class="icon">
-              <a href="https://www.newwinelive.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://www.newwinelive.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -650,9 +651,9 @@
               <img src="./img/img-proyectos/flar.png" alt="Tonic">
             </div>
             <div class="icon">
-              <a href="https://www.flavvrr.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://www.flavvrr.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
@@ -673,9 +674,9 @@
               <img src="./img/img-proyectos/gecko.png" alt="Shower Gel">
             </div>
             <div class="icon">
-              <a href="https://geckoflux.com/" class="iconBox" target="_blank" > <span class="material-symbols-outlined">
-                  arrow_outward
-                </span></a>
+              <a href="https://geckoflux.com/" class="iconBox" target="_blank" > <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg></a>
             </div>
           </div>
         </div>
